@@ -122,8 +122,8 @@ def creole10_base(wiki_links_base_url='',wiki_links_space_char='_',
         table = Table('table','|')
 
         li = ListItem('li',list_tokens='*#')
-        ol = List('ol','#',stop_tokens='*>')
-        ul = List('ul','*',stop_tokens='#>')
+        ol = List('ol','#',stop_tokens='*')
+        ul = List('ul','*',stop_tokens='#')
         nested_ol = NestedList('ol','#')
         nested_ul = NestedList('ul','*')
 
@@ -218,7 +218,7 @@ def creole11_base(macro_func=None,**kwargs):
         
         dd = DefinitionDef('dd',':')
         dt = DefinitionTerm('dt',';',stop_token=':')
-        dl = List('dl',';',stop_tokens='*#>')
+        dl = List('dl',';',stop_tokens='*#')
 
         macro = Macro('',('<<','>>'),func=macro_func)
         bodiedmacro = BodiedMacro('',('<<','>>'),func=macro_func)
@@ -239,7 +239,7 @@ def creole11_base(macro_func=None,**kwargs):
         @property 
         def block_elements(self):
             return [(self.bodied_block_macro,self.pre),self.blank_line,self.table,self.headings,
-                           self.hr,self.dl,self.ul,self.ol,self.indented,self.p]
+                           self.hr,self.indented,self.dl,self.ul,self.ol,self.p]
     return Base
 
 
